--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url("IMAGES/black.jpg");
+    background-image: url("black.jpg");
     background-size: cover;
     background-position: center;
 }
